samples/_failures_safe/1761518228_371730_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fff2f993.c: In function ‘main’:
./samples/SAFE/__tmp_fff2f993.c:139:15: error: expected ‘)’ at end of input
  139 |     if (strlen
      |        ~      ^
      |               )
./samples/SAFE/__tmp_fff2f993.c:139:5: error: expected declaration or statement at end of input
  139 |     if (strlen
      |     ^~
